@@ -11,13 +11,12 @@ require('../scoreboard.php');
 
 include('menu.php');
 
+echo "<h1>Submissions team ".htmlentities($name)."</h1>\n\n";
+
 // Put overview of team submissions (like scoreboard)
-echo "<div id=\"submissions\">\n";
+echo "<div id=\"teamscoresummary\">\n";
 putTeamRow($login);
 echo "</div>\n";
-
-
-echo "<h1>Submissions team ".htmlentities($name)."</h1>\n\n";
 
 // call putSubmissions function from common.php for this team.
 putSubmissions('team', $login);
